autotests/kerfuffle/addtoarchivetest.cpp
@@ -59,6 +59,12 @@ void AddToArchiveTest::testCompressHere_data()
         << QStringList {QFINDTESTDATA("data/testfile.txt")}
         << QStringLiteral("testfile.tar.gz")
         << 1ULL;
+
+    QTest::newRow("compress here (as TAR) - bug #362690")
+        << QStringLiteral("tar.gz")
+        << QStringList {QFINDTESTDATA("data/test-3.4.0")}
+        << QStringLiteral("test-3.4.0.tar.gz")
+        << 1ULL;
 }
 
 void AddToArchiveTest::testCompressHere()
